[EFL][WK2] Don't use the C API internally in ewk_cookie_manager https://bugs.webkit.org/show_bug.cgi?id=103243

Patch by Jinwoo Song <jinwoo7.song@samsung.com> on 2012-12-05
Reviewed by Gyuyoung Kim.

Used the C++ classes directly instead of the C API wrappers
to avoid a lot of toImpl/toAPI casts.

* UIProcess/API/efl/ewk_context.cpp:
(EwkContext::cookieManager):
* UIProcess/API/efl/ewk_cookie_manager.cpp:
(EwkCookieManager::EwkCookieManager):
(EwkCookieManager::~EwkCookieManager):
(EwkCookieManager::setPersistentStorage):
(EwkCookieManager::setHTTPAcceptPolicy):
(EwkCookieManager::clearHostnameCookies):
(EwkCookieManager::clearAllCookies):
(EwkCookieManager::watchChanges):
(EwkCookieManager::getHostNamesWithCookies):
(EwkCookieManager::getHTTPAcceptPolicy):
* UIProcess/API/efl/ewk_cookie_manager_private.h:
(EwkCookieManager::create):
(EwkCookieManager):

Canonical link: https://commits.webkit.org/122364@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136787 268f45cc-cd09-0410-ab3c-d52691b4dbfc